Change the overdraw color to a GPU friendly color

When skia works in CPU mode, color should be 0x00000000, 0x00000000,0x2f0000ff,
0x2f00ff00, 0x3fff0000, 0x7fff0000. When it turns to GPU, the R and B should be
swapped.

Skia mainly works in GPU mode, so change this color to a GPU friendly color.

However, the best solution is to support both CPU mode and GPU mode. Add TODO
for this.

Bug: 889122
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I71aa1d2ae34ab10a41ba5d58e1e2cbb6867bec6b
Reviewed-on: https://chromium-review.googlesource.com/c/1253407
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: Xing Xu <xing.xu@intel.com>
Cr-Commit-Position: refs/heads/master@{#601344}
Former-commit-id: 0b3c5cb709257afacc429ce94bea5cd8a2356493