components/viz/service/display/skia_renderer.cc
@@ -264,8 +264,10 @@ void SkiaRenderer::FinishDrawingFrame() {
   if (settings_->show_overdraw_feedback) {
     sk_sp<SkImage> image = overdraw_surface_->makeImageSnapshot();
     SkPaint paint;
+    // TODO(xing.xu) : handle this in CPU mode, the R and B should be switched
+    // in CPU mode. (http://crbug.com/896969)
     static const SkPMColor colors[SkOverdrawColorFilter::kNumColors] = {
-        0x00000000, 0x00000000, 0x2f0000ff, 0x2f00ff00, 0x3fff0000, 0x7fff0000,
+        0x00000000, 0x00000000, 0x2fff0000, 0x2f00ff00, 0x3f0000ff, 0x7f0000ff,
     };
     sk_sp<SkColorFilter> color_filter = SkOverdrawColorFilter::Make(colors);
     paint.setColorFilter(color_filter);
